đã sửa ảnh, thêm js,

--- a/WEBTEST/WEBTHUVI/html/index1.html
+++ b/WEBTEST/WEBTHUVI/html/index1.html
@@ -44,12 +44,13 @@
 
     <div class="slider">
         <div class="slides">
-            <img class="aaaa" src="../asset/img/img1/anh1.jpg" class="slide" alt="Ảnh 1">
-            <img src="../asset/img/img1/" class="slide" alt="Ảnh 2">
-            <img src="../asset/img/img1/" class="slide" alt="Ảnh 3">
-            <img src="../asset/img/img1" class="slide" alt="Ảnh 1">
-            <img src="../asset/img/img1" class="slide" alt="Ảnh 2">
-            <img src="../asset/img/img1" class="slide" alt="Ảnh 3">
+            <img src="../asset/img/img1/anh1.jpg" class="slide" alt="Ảnh 1">
+            <img src="../asset/img/img1/anh2.jpg" class="slide" alt="Ảnh 2">
+            <img src="../asset/img/img1/anh3.jpg" class="slide" alt="Ảnh 3">
+            <img src="../asset/img/img1/anh5.jpg" class="slide" alt="Ảnh 1">
+            <img src="../asset/img/img1/anh4.jpg" class="slide" alt="Ảnh 2">
+            <img src="../asset/img/img1/anh7.jpg" class="slide" alt="Ảnh 3">
+            <img src="../asset/img/img1/anh6.jpg" class="slide" alt="Ảnh 3">
         </div>
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <button class="next" onclick="nextSlide()">&#10095;</button>
