--- a/WEBTEST/WEBTHUVI/html/index7.html
+++ b/WEBTEST/WEBTHUVI/html/index7.html
@@ -107,6 +107,7 @@
                 
                 <button type="submit">Submit</button>
             </form>
+            <script src="../asset/js/index7.js"></script>
         </div>
     </div>
 
