--- a/WEBTEST/WEBTHUVI/html/index1.html
+++ b/WEBTEST/WEBTHUVI/html/index1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>a076d05399
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -70,7 +70,7 @@
                     <h1>MEJIWOO</h1>
                     <h2>미지우</h2>
                     <p>------------------------------------------------</p>
-                    <p>make your everyday look prettier</p>
+                    <p>make your everyday look prettieraaaa</p>
                     <p>with MEJIWOO Korean Made</p>
                 </div>
                 <img src="../asset/img/img1/image 20.png" alt="Fashion 3">
