--- a/WEBTEST/WEBTHUVI/html/index1.html
+++ b/WEBTEST/WEBTHUVI/html/index1.html
@@ -99,7 +99,7 @@
             </div>
         </div>
     </div>
-<div class="banner">
+<div class="banner">a
     <div class="products">
         <img src="../asset/img/img1/image 3.png" alt="Purple Top">
         <img src="../asset/img/img1/image 4.png" alt="Black and White Dress">
